force-app/main/default/objects/Contact/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Academic Year</label>
    <referenceTo>Academic_Year__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>