force-app/main/default/objects/Contact/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <label>Blood Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-positive (A+)</fullName>
            </value>
            <value>
                <fullName>A-negative (A-)</fullName>
            </value>
            <value>
                <fullName>B-positive (B+)</fullName>
            </value>
            <value>
                <fullName>B-negative (B-)</fullName>
            </value>
            <value>
                <fullName>AB-positive (AB+)</fullName>
            </value>
            <value>
                <fullName>AB-negative (AB-)</fullName>
            </value>
            <value>
                <fullName>O-positive (O+)</fullName>
            </value>
            <value>
                <fullName>O-negative (O-)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>