force-app/main/default/objects/Contact/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSLC</fullName>
            </value>
            <value>
                <fullName>HSC</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>