force-app/main/default/objects/Contact/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Name</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>