force-app/main/default/objects/Contact/fields/Class_Section__c.field-meta.xml
<CustomField>
    <fullName>Class_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Section</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>section__c.Class__c</field>
            <operation>equals</operation>
            <valueField>$Source.Class_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>section__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>