force-app/main/default/objects/Contact/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departments</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>