force-app/main/default/objects/Contact/fields/Father_s_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Contact_Number__c</fullName>
    <label>Father&apos;s Contact Number</label>
    <type>Phone</type>
</CustomField>