force-app/main/default/objects/Contact/fields/Father_s_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Occupation__c</fullName>
    <label>Father&apos;s Occupation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>