force-app/main/default/objects/Contact/fields/FatherFirstName__c.field-meta.xml
<CustomField>
    <fullName>FatherFirstName__c</fullName>
    <label>Father First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>