force-app/main/default/objects/Contact/fields/FatherLastName__c.field-meta.xml
<CustomField>
    <fullName>FatherLastName__c</fullName>
    <label>Father Last Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>