force-app/main/default/objects/Contact/fields/Guardian_s_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Guardian_s_Contact_Number__c</fullName>
    <label>Guardian&apos;s Contact Number</label>
    <type>Phone</type>
</CustomField>