force-app/main/default/objects/Contact/fields/Guardian_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_s_Name__c</fullName>
    <label>Guardian&apos;s Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>