force-app/main/default/objects/Contact/fields/GuardianFirstName__c.field-meta.xml
<CustomField>
    <fullName>GuardianFirstName__c</fullName>
    <label>Guardian First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>