force-app/main/default/objects/Contact/fields/GuardianLastName__c.field-meta.xml
<CustomField>
    <fullName>GuardianLastName__c</fullName>
    <label>Guardian Last Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>