force-app/main/default/objects/Contact/fields/Mother_s_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Contact_Number__c</fullName>
    <label>Mother&apos;s Contact Number</label>
    <type>Phone</type>
</CustomField>