force-app/main/default/objects/Contact/fields/Mother_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Name__c</fullName>
    <label>Mother&apos;s Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>