force-app/main/default/objects/Contact/fields/MotherFirstName__c.field-meta.xml
<CustomField>
    <fullName>MotherFirstName__c</fullName>
    <label>Mother First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>