force-app/main/default/objects/Contact/fields/MotherLastName__c.field-meta.xml
<CustomField>
    <fullName>MotherLastName__c</fullName>
    <label>Mother Last Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>