force-app/main/default/objects/Contact/fields/Parent_Guardian_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Last_Name__c</fullName>
    <label>Parent/Guardian Last Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>