force-app/main/default/objects/Contact/fields/Point_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_contact__c</fullName>
    <label>Point of contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>