force-app/main/default/objects/Contact/fields/Roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Roll_Number__c</fullName>
    <displayFormat>SV-{0000}</displayFormat>
    <label>Roll Number</label>
    <type>AutoNumber</type>
</CustomField>