force-app/main/default/objects/Contact/fields/Siblings__c.field-meta.xml
<CustomField>
    <fullName>Siblings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Siblings?</label>
    <type>Checkbox</type>
</CustomField>