force-app/main/default/objects/Contact/fields/Staff_Id__c.field-meta.xml
<CustomField>
    <fullName>Staff_Id__c</fullName>
    <displayFormat>TA-{00000}</displayFormat>
    <label>Staff Id</label>
    <type>AutoNumber</type>
</CustomField>