force-app/main/default/objects/Contact/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>TamilNadu</fullName>
            </value>
            <value>
                <fullName>Adhrapradesh</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>maharashtra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>