force-app/main/default/objects/Contact/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <label>Teacher Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>