force-app/main/default/objects/Contact/recordTypes/Students_Parents.recordType-meta.xml
<RecordType>
    <fullName>Students_Parents</fullName>
    <active>true</active>
    <label>Students/Parents</label>
</RecordType>