force-app/main/default/objects/Contact/validationRules/Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required</fullName>
    <active>false</active>
    <description>without Email the contact record will not be created</description>
    <errorConditionFormula>REGEX ( UPPER ( Email ) ,&quot;^[A-Z0-9._%+-/!#$%&amp;&apos;*=?^_`{|}~]+@[A-Z0-9.-]+\\.[A-Z]{2,4}$&quot;)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email ID should follow the pattern</errorMessage>
</ValidationRule>