force-app/main/default/objects/Contact/listViews/Teacher_List_View.listView-meta.xml
<ListView>
    <fullName>Teacher_List_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Nagaratna</value>
    </filters>
    <label>Teacher List View</label>
</ListView>